--- a/templates/specimen.html
+++ b/templates/specimen.html
@@ -1,4 +1,4 @@
-$def with (page)
+$def with ()
 <head><title>Specimen</title>
 <link rel="stylesheet" type="text/css" href="/static/mfg.css"/>
 <style>
