--- a/templates/view.html
+++ b/templates/view.html
@@ -320,7 +320,7 @@ Canvas.prototype.saveParamSuccess = function(data) {
         this.saveParamRequest(this.currentsegment.data[paramname], this.saveParamCanceled.bind(this));
       } else {
         this.glyphorigin.dataGlyph = jQuery.parseJSON(data).R.edges;
-        glyphpreview.drawOn(this);
+        this.glyphorigin.drawOn(this);
       }
     }.bind(this));
 
