--- a/templates/view.html
+++ b/templates/view.html
@@ -121,19 +121,26 @@ ControlPoints.prototype.drawOn = function(canvas) {
 function GlyphOrigin(dataGlyph) {
   this.dataGlyph = dataGlyph;
   this.glyphpaths = [];
+  this.texts = [];
 }
 
 GlyphOrigin.prototype.delete = function() {
   for (var k = 0; k < this.glyphpaths.length; k++) {
-    this.glyphpaths[k].segment.path.remove();
+    this.glyphpaths[k].gpath.removeSegments();
+    this.glyphpaths[k].gpath.remove();
   }
 }
 
 GlyphOrigin.prototype.drawOn = function(canvas) {
   canvas.paper.activate();
   this.delete();
-  this.glyphpaths = []
+  this.glyphpaths = [];
 
+  for (var k = 0; k < this.texts.length; k++) {
+    this.texts[k].remove();
+  }
+
+  this.texts = [];
   for (var i = 0; i < this.dataGlyph.length; i++) {
       for (var j = 0; j < this.dataGlyph[i].contours.length; j++) {
           var path = new canvas.paper.Path();
@@ -149,16 +156,24 @@ GlyphOrigin.prototype.drawOn = function(canvas) {
                                         Number(contour.y) - Number(contour.controls[1].y));
               segment = new canvas.paper.Segment(point, handleIn, handleOut);
 
+              var gpath = canvas.paper.Path.Rectangle(point, 1);
+              gpath.strokeColor = 'green';
+              gpath.closed = true;
+              gpath.selected = true;
+
               if (canvas.controlpoints && this.glyphpaths.length) {
-                    // var text = new canvas.paper.PointText({point: [point.x, point.y]});
-                    // text.fillColor = 'black';
-                    // text.content = canvas.controlpoints.paths[this.glyphpaths.length].pointnr;
+                  var text = new canvas.paper.PointText(point);
+                  text.content = canvas.controlpoints.paths[this.glyphpaths.length].pointnr;
+                  this.texts.push(text);
+
                   this.glyphpaths.push({zpoint: canvas.controlpoints.paths[this.glyphpaths.length],
-                                        segment: segment});
+                                        gpath: gpath});
+
               } else if (canvas.controlpoints) {
                 this.glyphpaths.push({zpoint: canvas.controlpoints.paths[this.glyphpaths.length],
-                                        segment: segment});
+                                      gpath: gpath});
               }
+
               path.add(segment);
           }
           path.fillColor = {
@@ -169,13 +184,8 @@ GlyphOrigin.prototype.drawOn = function(canvas) {
           };
           path.closed = true;
           path.strokeColor = new canvas.paper.Color(0.5, 0, 0.5);
-          path.selected = true;
       }
   }
-
-  console.log('');
-  console.log('gpoints: ' + this.glyphpaths.map(function(v){return Math.round(Number(v.segment.point.x))}));
-  console.log('zpoints: ' + this.glyphpaths.map(function(v){return Math.round(Number(v.zpoint.point.x))}));
 
   canvas.draw();
 }
@@ -229,39 +239,41 @@ Canvas.prototype.renderGlyph = function(edges) {
 }
 
 Canvas.prototype.onMouseDown = function(event) {
-  this.currentsegment = null;
+  this.currentpath = null;
   this.parameterform.find('form').val("");
 
   this.parameterform.hide();
   for (var k = 0; k < this.glyphorigin.glyphpaths.length; k++) {
-    if (this.glyphorigin.glyphpaths[k].segment.point.getDistance(event.point) < 5) {
-      this.currentsegment = this.glyphorigin.glyphpaths[k];
-      this.box.position = this.glyphorigin.glyphpaths[k].segment.point;
+    var p = this.glyphorigin.glyphpaths[k].gpath.segments[0].point;
+    if (p.getDistance(event.point) < 5) {
+      this.currentpath = this.glyphorigin.glyphpaths[k];
+      this.box.position = event.point;
       this.isdragged = false;
-      console.log(this.currentsegment.zpoint.pointnr);
+      console.log(this.currentpath.zpoint.pointnr);
       return;
     };
   }
 }
 
 Canvas.prototype.onMouseDrag = function(event) {
-  if (!this.currentsegment) {
+  if (!this.currentpath) {
     return;
   }
   this.box.position = event.point;
-  this.currentsegment.segment.point = event.point;
+  this.currentpath.gpath.position = event.point;
   this.isdragged = true;
 };
 
 
 Canvas.prototype.onMouseUp = function(event) {
-  if (this.currentsegment) {
+  if (this.currentpath) {
     if (this.isdragged) {
-      var x = this.currentsegment.zpoint.point.x + event.delta.x;
-      var y = this.currentsegment.zpoint.point.y + event.delta.y - 200;
+      var x = this.currentpath.zpoint.point.x + event.delta.x;
+      var y = this.currentpath.zpoint.point.y + event.delta.y - 200;
+      console.log(event.delta);
       var xycoord = this.restore_original_coords(new paper.Point(x, y));
       jQuery.post('', {
-          pointnr: this.currentsegment.zpoint.pointnr,
+          pointnr: this.currentpath.zpoint.pointnr,
           x: xycoord.x,
           y: 500 - xycoord.y,
           source: this.source
@@ -286,7 +298,7 @@ Canvas.prototype.onMouseUp = function(event) {
       this.parameterform.show();
       this.parameterform.find('select').off('change').on('change', function(event){
         var val = jQuery(event.target).val();
-        this.parameterform.find('input[type=text]').val(this.currentsegment.zpoint.data[val]);
+        this.parameterform.find('input[type=text]').val(this.currentpath.zpoint.data[val]);
       }.bind(this));
 
       this.parameterform.find('button').off('click').on('click', function(e){
@@ -303,8 +315,8 @@ Canvas.prototype.saveParamRequest = function(val, successhandler) {
   jQuery.post('/view/$master.fontname/$glyphid/save-point/',
               {name: this.parameterform.find('select').val(),
                value: val,
-               pointnr: this.currentsegment.zpoint.data.pointnr,
-               ab_source: this.currentsegment.zpoint.data.fontsource})
+               pointnr: this.currentpath.zpoint.data.pointnr,
+               ab_source: this.currentpath.zpoint.data.fontsource})
         .fail(this.saveParamException.bind(this))
         .success(successhandler || this.saveParamSuccess.bind(this));
 }
@@ -330,7 +342,7 @@ Canvas.prototype.saveParamSuccess = function(data) {
 
       if (jQuery(e.target).attr('command') == 'cancel') {
         var paramname = this.parameterform.find('select').val();
-        this.saveParamRequest(this.currentsegment.zpoint.data[paramname], this.saveParamCanceled.bind(this));
+        this.saveParamRequest(this.currentpath.zpoint.data[paramname], this.saveParamCanceled.bind(this));
       } else {
         this.controlpoints.dataPoints = jQuery.parseJSON(data).zpoints;
         this.controlpoints.drawOn(this);
